# simpleSudoku

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json
include/: sudoku.hh
src/: sudoku.cc
